<resources>
    <string name="app_name">eatit</string>
    <string name="button">Button</string>
    <string name="name">Name</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="new_user">new user?</string>
    <string name="register_here">register here</string>
    <string name="number_of_attempts">number of attempts...</string>
    <string name="user_name">user name</string>
    <string name="enter_new_user_name">enter new user name</string>
    <string name="new_password">new password</string>
    <string name="confirm_password">confirm password</string>
    <string name="submit">submit</string>
    <string name="back">back</string>
    <string name="Todo">TODO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout">logout</string>
    <string name="refresh">refresh</string>
    <string name="email_address">email address</string>
    <string name="title_activity_menu2">menu2</string>
    <string name="options">options</string>
    <string name="phone_number">phone number</string>
    <string name="username2">username</string>
    <string name="profil">profil</string>
    <string name="this_is_the_discription_of_the_post">this is the discription of the post</string>
    <string name="title">Title</string>
    <string name="thisn_of_the_post">This_is_the_discription_of_the_post</string>
    <string name="search">search</string>
    <string name="profile">profile</string>
    <string name="user_details">User Details</string>
    <string name="diary">Diary</string>
    <string name="wanted">Wanted</string>
    <string name="uploades">Uploades</string>
    <string name="todo">TODO</string>
    <string name="data1">data1</string>
    <string name="data2">data2</string>
    <string name="add">add</string>
    <string name="username">username</string>
    <string name="show">Show</string>
    <string name="size">size</string>
    <string name="faceing">faceing</string>
    <string name="deal_type">deal type</string>
    <string name="property_details">Property Details</string>
    <string name="address">address</string>
    <string name="description">description</string>
    <string name="dealer">dealer</string>
    <string name="textview">TextView</string>
    <string name="todo1">TODO</string>
    <string name="iteam_details">iteam details</string>
    <string name="place_order">place order</string>
    <string name="your_order_has_been_placed_and_is_on_its_way">your order has been placed and is on its way</string>
    <string name="thank_you">thank you</string>
</resources>
