<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="#fff"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:contentPadding="5dp"
    app:cardUseCompatPadding="true"
    tools:context=".menushow"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/ImageViewtv"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:layout_height="200dp"
                android:background="@drawable/loadig"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/property_details"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/iteam_details"
                android:textSize="25sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/Titletv"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/title"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/t_address_icon"
                    android:layout_width="177dp"
                    android:layout_height="match_parent"
                    android:text="@string/address" />
                <TextView
                    android:id="@+id/t_address_details"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/address" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/t_des_icon"
                    android:layout_width="177dp"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:text="@string/description" />
                <TextView
                    android:id="@+id/descrptiontv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/this_is_the_discription_of_the_post" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/place_order" />
        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.CardView>