<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#fff"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:contentPadding="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        >


        <ImageView
            android:id="@+id/rImageViewtv"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:background="@drawable/loadig"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rTitletv"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/title"
                android:textSize="20sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/rdescrptiontv"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:text="@string/thisn_of_the_post"
                android:textSize="20sp" />

            <TextView
                    android:id="@+id/raddress"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/address"/>

    </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>